# powerbaby

./: Cargo.toml  README.md  justfile  powerbaby.json
.cargo/: config.toml
assets/models/balloon_chest/: scene.gltf
assets/models/char_null/: scene.gltf
assets/models/effect_pyroparticles/: scene.gltf
assets/models/field/: license.txt  scene.gltf
assets/models/flag_canadian/: license.txt  scene.gltf
assets/models/flag_usa/: license.txt  scene.gltf
assets/models/island/: uploads_files_2750458_Landscape.gltf
assets/models/logo_ethereum/: license.txt  scene.gltf
assets/models/stadium/: scene.gltf
assets/models/yoshi/: license.txt  scene.gltf
client/: Cargo.toml  package.json
client/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
mobile/: Cargo.toml  Makefile
mobile/bevy_mobile_example.xcodeproj/: project.pbxproj
mobile/bevy_mobile_example.xcodeproj/xcshareddata/xcschemes/: bevy_mobile_example.xcscheme
mobile/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
src/: client.rs  main.rs  protocol.rs  server.rs
website/: package.json
website/public/: game-single.html  game.html  index.html  result.json  test.json
website/src/: App.css  App.js
