[package]
name = "powerbaby-client"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

# # `wasm-opt` is on by default in for the release profile, but it can be
# # disabled by setting it to `false`
# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false
#
# [lib]
# crate-type = ["cdylib", "rlib"]
#
[dependencies]
core = { package = "powerbaby-core", path = "../core" }
protocol = { package = "powerbaby-protocol", path = "../protocol" }

anyhow = { workspace = true }
log = { workspace = true }
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }

naia-bevy-shared = { workspace = true }
naia-bevy-client = { workspace = true }

bevy-inspector-egui = { workspace = true }
bevy-debug-text-overlay = { workspace = true }

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Window", "Location"] }
js-sys = { version = "0.3.61" }
